# gpt2cursor

./: .gitignore  LICENSE  README-CN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-windows.yml  release.yml
docs/: HOW_TO_USE.md  HOW_TO_USE_CN.md
scripts/: sign-macos-bundle.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  codex.rs  launch.rs  main.rs  ngrok.rs  settings.rs  tray_icon.rs
