[package]
name = "gpt2cursor"
version = "0.4.1"
description = "A local menu-bar Codex-to-Cursor bridge"
authors = ["gpt2cursor"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
image = "=0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.0.0", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-build = "=2.0.0"
tauri-plugin = "=2.0.0"
tauri-runtime = "=2.0.0"
tauri-runtime-wry = "=2.0.0"
tauri-utils = "=2.0.0"
time = "=0.3.36"
portable-pty = "0.9"
dirs = "5.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "=0.26.0"
objc = "=0.2.7"
libc = "0.2"
